[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cad_kin"
version = "0.0.1"
authors = [
  { name="Jacob Pavelka", email="jpavelka@umich.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "wolframclient",
  "numpy",
  "matplotlib",
  "scipy",
  "python-dotenv"
]

[project.urls]
Homepage = "https://github.com/jacob-umich/cad_kin"
Issues = "https://github.com/jacob-umich/cad_kin/issues"

